# latti-ai

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/en/: build-guide.md  whitepaper.md
docs/zh/: whitepaper.md
examples/: CMakeLists.txt  README.md  inference.cpp
examples/test_cifar10/: CMakeLists.txt  gen_mega_ag.py  inference.cpp  train.py
examples/test_cifar10/model/: __init__.py
examples/test_imagenet/: CMakeLists.txt  inference.cpp  train.py
examples/test_imagenet/model/: mobilenetv2.py
examples/test_imagenet/task/client/: ckks_parameter.json
examples/test_imagenet/task/server/: ckks_parameter.json
examples/test_mnist/: CMakeLists.txt  inference.cpp  train.py
examples/test_mnist/model/: __init__.py  cnn.py
inference/: util.cpp  util.h
inference/data_structs/: feature.h  feature0d.cpp  feature1d.cpp  feature2d.cpp
inference/fhe_layers/: CMakeLists.txt  avgpool2d_layer.cpp  block_ccmm.cpp  block_ccmm.h  block_cpmm.cpp  block_cpmm.h  conv2d_layer.cpp  dense_packed_layer.cpp  inverse_multiplexed_conv2d_layer.cpp  mult_scaler.cpp  poly_relu2d.cpp  upsample_nearest_layer.cpp
inference/inference_task/: inference_process.cpp
inference/interface/: CMakeLists.txt  inference_client.cpp  inference_client.h  inference_server.cpp  inference_server.h
inference/model_generator/layers/: add_pack.py  avgpool.py  conv_dw.py  conv_pack.py  dense_pack.py  inverse_multiplexed_conv2d_layer.py  mult_conv.py  mult_conv_dw.py  poly_relu.py  upsample_layer.py
inference/unittests/: test_fhe_layers_hetero.cpp  test_gen_layers.py
inference/util/: array_io.h  helper.h  serial.h
training/: README.md  ct_json_viz.py  requirements.txt  run_compile.py
training/example/: train.py
training/model_compiler/: components.py  graph_partition_dp.py  pipeline.py  processor.py  transforms.py
training/model_compiler/unittests/: nn_modules.py  test_compiler.py
training/nn_tools/: export.py
